Added C# project code. Removed old python code.

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,30 @@
 .idea/
+.gitattributes
+default.txt
+tobii_bench/.vs/tobii_bench/v15/.suo
+tobii_bench/.vs/tobii_bench/v15/Server/sqlite3/db.lock
+tobii_bench/.vs/tobii_bench/v15/Server/sqlite3/storage.ide
+tobii_bench/.vs/tobii_bench/v15/Server/sqlite3/storage.ide-shm
+tobii_bench/.vs/tobii_bench/v15/Server/sqlite3/storage.ide-wal
+tobii_bench/tobii_bench/App.config
+tobii_bench/tobii_bench/bin/Debug/tobii_bench.exe.config
+tobii_bench/tobii_bench/bin/Debug/tobii_bench.pdb
+tobii_bench/tobii_bench/Form1.resx
+tobii_bench/tobii_bench/obj/Debug/tobii_bench.pdb
+tobii_bench/tobii_bench/obj/Debug/tobii_bench.Form1.resources
+tobii_bench/tobii_bench/obj/Debug/tobii_bench.csprojAssemblyReference.cache
+tobii_bench/tobii_bench/obj/Debug/tobii_bench.csproj.GenerateResource.cache
+tobii_bench/tobii_bench/obj/Debug/tobii_bench.csproj.FileListAbsolute.txt
+tobii_bench/tobii_bench/obj/Debug/tobii_bench.csproj.CoreCompileInputs.cache
+tobii_bench/tobii_bench/obj/Debug/TemporaryGeneratedFile_E7A71F73-0F8D-4B9B-B56E-8E70B10BC5D3.cs
+tobii_bench/tobii_bench/obj/Debug/TemporaryGeneratedFile_5937a670-0e60-4077-877b-f7221da3dda1.cs
+tobii_bench/tobii_bench/obj/Debug/TemporaryGeneratedFile_036C0B5B-1481-4323-8D20-8F5ADCB23D92.cs
+tobii_bench/tobii_bench/obj/Debug/DesignTimeResolveAssemblyReferencesInput.cache
+tobii_bench/tobii_bench/obj/Debug/DesignTimeResolveAssemblyReferences.cache
+tobii_bench/tobii_bench/Properties/Settings.settings
+tobii_bench/tobii_bench/tobii_bench.csproj
+tobii_bench/tobii_bench/Properties/Resources.resx
+tobii_bench/tobii_bench/Properties/AssemblyInfo.cs
+tobii_bench/tobii_bench/obj/Debug/tobii_bench.Properties.Resources.resources
+tobii_bench/tobii_bench/bin/Debug/tobii_bench.exe
+tobii_bench/tobii_bench.sln
