--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,5 @@ tobii_bench/tobii_bench.sln
 tobii_bench/tobii_bench/obj/Debug/tobii_bench.Canvas.resources
 tobii_bench/tobii_bench/obj/Debug/tobii_bench.exe
 tobii_bench/tobii_bench/bin/Debug/data/output.txt
+tobii_bench/Tobii output processing.ipynb
+tobii_bench/.ipynb_checkpoints/Tobii output processing-checkpoint.ipynb
