Changed data output method
new file names
more parameters

--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,4 @@ tobii_bench/tobii_bench/obj/Debug/tobii_bench.exe
 tobii_bench/tobii_bench/bin/Debug/data/output.txt
 tobii_bench/Tobii output processing.ipynb
 tobii_bench/.ipynb_checkpoints/Tobii output processing-checkpoint.ipynb
+tobii_bench/.vs/tobii_bench/DesignTimeBuild/.dtbcache
